[project]
name = "pyrit"
version = "0.10.0.dev0"
description = "The Python Risk Identification Tool for LLMs (PyRIT) is a library used to assess the robustness of LLMs"
authors = [
    { name = "Microsoft AI Red Team", email = "airedteam@microsoft.com" },
]
readme = "README.md"
license = "MIT"
keywords = [
    "llm",
    "ai-safety",
    "ai-security",
    "ai-red-team",
    "ai-red-teaming",
    "ai-robustness",
    "ai-robustness-testing",
    "ai-risk-assessment",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "aiofiles>=24,<25",
    "appdirs>=1.4.0",
    "art>=6.5.0",
    "azure-core>=1.34.0",
    "azure-identity>=1.19.0",
    "azure-ai-contentsafety>=1.0.0",
    "azure-storage-blob>=12.19.0",
    "base2048>=0.1.3",
    "colorama>=0.4.6",
    "confusables>=1.2.0",
    "confusable-homoglyphs>=3.3.1",
    "ecoji>=0.1.1",
    "datasets>=3.6.0",
    "httpx[http2]>=0.27.2",
    "jinja2>=3.1.6",
    "numpy>=1.26.0",
    "openai>=2.2.0",
    "openpyxl>=3.1.5",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pyodbc>=5.1.0",
    "python-dotenv>=1.0.1",
    "pypdf>=5.1.0",
    "reportlab>=4.4.4",
    "segno>=1.6.6",
    "scipy>=1.15.3",
    "SQLAlchemy>=2.0.41",
    "termcolor>=2.4.0",
    "tenacity>=9.1.2",
    "tinytag>=2.1.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "treelib>=1.7.1",
    "websockets>=14.0",
]

[project.optional-dependencies]
# always make sure the individual ones are in sync with the all group
dev = [
    "black>=25.1.0",
    "feedgen>=1.0.0",
    "flake8>=7.2.0",
    "flake8-copyright>=0.2.4",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyter-book==1.0.4",
    "jupytext>=1.17.1",
    "mypy>=1.16.0",
    "mock-alchemy>=0.2.6",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-timeout>=2.4.0",
    "respx>=0.22.0",
    "ruff>=0.14.4",
    "sphinxcontrib-mermaid>=1.0.0",
    "types-PyYAML>=6.0.12.20250516",
    "types-requests>=2.31.0.20250515",
]
huggingface = [
    "torch>=2.7.0",
]
gcg = [
    "accelerate>=1.7.0",
    "azure-ai-ml>=1.27.1",
    "azureml-mlflow>=1.60.0",
    "mlflow>=2.22.0",
    "ml-collections>=1.1.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
]
playwright = [
    "flask>=3.1.0",
    "ollama>=0.5.1",
    "playwright>=1.49.0",
]
gradio = [
    "gradio>=5.32.0",
    "rpyc>=6.0.1",
    "pywebview>=5.4"
]
fastapi = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
fairness_bias = [
    "spacy>=3.8.7",
]
opencv = [
    "opencv-python>=4.11.0.86",
]

speech = [
    "azure-cognitiveservices-speech>=1.46.0",
]


# all includes all functional dependencies excluding the ones from the "dev" extra
all = [
    "accelerate>=1.7.0",
    "azure-ai-ml>=1.27.1",
    "azure-cognitiveservices-speech>=1.44.0",
    "azureml-mlflow>=1.60.0",
    "fastapi>=0.115.0",
    "flask>=3.1.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "gradio>=5.32.0",
    "mlflow>=2.22.0",
    "ml-collections>=1.1.0",
    "ollama>=0.5.1",
    "opencv-python>=4.11.0.86",
    "playwright>=1.49.0",
    "pywebview>=5.4",
    "spacy>=3.8.7",
    "rpyc>=6.0.1",
    "torch>=2.7.0",
    "types-PyYAML>=6.0.12.20250516",
    "types-requests>=2.31.0.20250515",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
pyrit_scan = "pyrit.cli.pyrit_scan:main"
pyrit_shell = "pyrit.cli.pyrit_shell:main"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.mypy]
plugins = []
ignore_missing_imports = true
strict = false
follow_imports = "silent"
strict_optional = false
disable_error_code = ["empty-body"]

[tool.black]
target-version = ["py310"]
line-length = 120

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyrit", "pyrit.*"]

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
select = [
    "D",  # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "DOC",  # https://docs.astral.sh/ruff/rules/#pydoclint-doc
    "F401",  # unused-import
]
ignore = [
    "D100",  # Missing docstring in public module
    "D200",  # One-line docstring should fit on one line
    "D205",  # 1 blank line required between summary line and description
    "D212",  # Multi-line docstring summary should start at the first line
    "D301",  # Use r""" if any backslashes in a docstring
    "DOC502",  # Raised exception is not explicitly raised
]
extend-select = [
    "D204",  # 1 blank line required after class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D401",  # First line of docstring should be in imperative mood
    "D404",  # First word of the docstring should not be "This"
]

[tool.ruff.lint.per-file-ignores]
# Ignore D and DOC rules everywhere except for the pyrit/ directory
"!pyrit/**.py" = ["D", "DOC"]
# Temporary ignores for pyrit/ subdirectories until issue #1176
# https://github.com/Azure/PyRIT/issues/1176 is fully resolved
# TODO: Remove these ignores once the issues are fixed
"pyrit/{auxiliary_attacks,exceptions,executor,memory,models,prompt_converter,prompt_normalizer,prompt_target,score,ui}/**/*.py" = ["D101", "D102", "D103", "D104", "D105", "D106", "D107", "D401", "D404", "D417", "D418", "DOC102", "DOC201", "DOC202", "DOC402", "DOC501"]
"pyrit/__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
